# file-browser

./: .gitignore  .gitmodules  README.md  app.py  pyproject.toml  requirements.txt
file_browser/: __init__.py  errors.py  utils.py
file_browser/templates/: 404.html  500.html  base.html  browser.html  permission_error.html  return.html
templates/: 500.html  base.html  permission_error.html
